# spacenav-ws

./: INSTALL.md  README.md  TODO.md  pyproject.toml
additional/: onshape-3d-mouse-linux.user.js  spacenav-ws.service
src/spacenav_ws/: buttons.py  controller.py  cursor_state.py  display.py  icons.py  keyboard.py  main.py  views.py  wamp.py
tests/: test_buttons.py  test_display.py  test_math.py
tools/: live_test.py
