[project]
name = "spacenav-ws"
version = "0.1.5"
description = "SpaceNav WebSocket Bridge for using a 3dConnexion spacemouse with onshape"
readme = "README.md"
authors = [{ name = "RmStorm", email = "roaldstorm@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "hid>=1.0.9",
    "numpy>=2.2.5",
    "scipy>=1.15.2",
    "typer>=0.15.2",
    "uvicorn[standard]>=0.34.2",
]

[project.optional-dependencies]
# Install with: pip install spacenav-ws[display]  (or: uv add spacenav-ws[display])
# Requires hidapi: sudo apt install libhidapi-hidraw0
display = ["hid>=0.14.0"]

[dependency-groups]
dev = ["pytest>=8.3.5"]

[project.scripts]
spacenav-ws = "spacenav_ws.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 150
