[project]
name = "spacenav-ws"
version = "0.1.5"
description = "SpaceNav WebSocket Bridge for using a 3dConnexion spacemouse with onshape"
readme = "README.md"
authors = [{ name = "RmStorm", email = "roaldstorm@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "cairosvg>=2.9.0",
    "fastapi>=0.115.12",
    "numpy>=2.2.5",
    "pillow>=12.2.0",
    "pyusb>=1.3.1",
    "scipy>=1.15.2",
    "typer>=0.15.2",
    "uvicorn[standard]>=0.34.2",
]

[dependency-groups]
dev = ["pytest>=8.3.5"]

[project.scripts]
spacenav-ws = "spacenav_ws.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 150
